codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1399
expression: rendered
---
╭──────────────────────────────────────────────────╮
│ ✨ Update available! <VERSION> -> 9.9.9   │
│ Run pnpm add -g @reb.ai/codex to update.         │
│                                                  │
│ See full release notes:                          │
│ https://github.com/rebroad/codex/releases/latest │
╰──────────────────────────────────────────────────╯
